--- a/src/components/MyOpenOrders.scss
+++ b/src/components/MyOpenOrders.scss
@@ -27,6 +27,20 @@ $overlay: rgba(130,130,130,.1);
     font-weight: bold;
     margin-bottom: 10px;
   }
+  // .Table {
+  //   // min-height: 100%;
+  //   .body {
+  //     display: flex;
+  //     flex-grow: 1;
+  //     .not-available, .not-available > div {
+  //       height: 100%;
+  //     }
+  //   }
+  // }
+  .Table {
+    min-height: 100%;
+    height: auto;
+  }
   .body {
     display: flex;
     flex-grow: 1;
